
healpixtestdir = $(datadir)/healpix/test

healpixtest_DATA = \
runtest.sh \
almdec.fits \
alm.fits \
alt.par \
ana_cut.par \
ana.par \
cl.fits \
cl_old.fits \
cl_out.fits \
cl_planck1.fits \
cl_planck2.fits \
cl_wmap1.fits \
cl_wmap5.fits \
cl_wmap7.fits \
distmask.fits \
distmask.gif \
hot.par \
map_ext.fits \
map_ext.gif \
map.fits \
map.gif \
map_LOres.fits \
map_LOres.gif \
map_mf.fits \
map_mf.gif \
map_ngfs.fits \
map_ngfs.gif \
map_sm.fits \
map_sm.gif \
mask.fits \
mask.gif \
max.asc \
med.par \
min.asc \
ngfs.par \
planck2013ext_lcdm_cl_v1.fits \
planck2015_lcdm_cl_v2.fits \
prmask.par \
README \
smo.par \
syn.par \
udg.par \
wmap_lcdm_pl_model_yr1_v1.fits \
wmap_lcdm_sz_lens_wmap5_cl_v3.fits \
wmap_lcdm_sz_lens_wmap7_cl_v4.fits

EXTRA_DIST = \
almdec.fits \
alm.fits \
alt.par \
ana_cut.par \
ana.par \
cl.fits \
cl_old.fits \
cl_out.fits \
cl_planck1.fits \
cl_planck2.fits \
cl_wmap1.fits \
cl_wmap5.fits \
cl_wmap7.fits \
distmask.fits \
distmask.gif \
hot.par \
map_ext.fits \
map_ext.gif \
map.fits \
map.gif \
map_LOres.fits \
map_LOres.gif \
map_mf.fits \
map_mf.gif \
map_ngfs.fits \
map_ngfs.gif \
map_sm.fits \
map_sm.gif \
mask.fits \
mask.gif \
max.asc \
med.par \
min.asc \
ngfs.par \
planck2013ext_lcdm_cl_v1.fits \
planck2015_lcdm_cl_v2.fits \
prmask.par \
README \
smo.par \
syn.par \
udg.par \
wmap_lcdm_pl_model_yr1_v1.fits \
wmap_lcdm_sz_lens_wmap5_cl_v3.fits \
wmap_lcdm_sz_lens_wmap7_cl_v4.fits

dist_noinst_SCRIPTS = runtest.sh

TESTS = runtest.sh

CLEANFILES = test*

